1. Include Vue.js in the "index.html" file; 2. To remake js-code from OOP to Vue.js; 3. Comment out all the js-code written in OOP; 4. Change html-code and scss-code for Vue.js; 5. Add a catalog of goods and basket goods from a js-code to the html-code; 6. Add the commented out product filtering function for further her changes and implementation.

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,11 @@
           box-sizing: border-box;
 }
 
-body {
+.center {
+  padding: 0 calc((100% - 1200px) / 2);
+}
+
+.shop {
   min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -17,10 +21,6 @@ body {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-}
-
-.center {
-  padding: 0 calc((100% - 1200px) / 2);
 }
 
 .header {
