--- a/styles/style.css
+++ b/styles/style.css
@@ -293,6 +293,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-right: 20px;
 }
 
 .basket_btn {
@@ -310,5 +311,22 @@
 .basket_btn:hover {
   background-color: grey;
   color: lavender;
+}
+
+.space_in_basket {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.space_in_basket__paragraph {
+  font-size: 48px;
 }
 /*# sourceMappingURL=style.css.map */
