--- a/styles/style.scss
+++ b/styles/style.scss
@@ -245,6 +245,7 @@ $products_basket__height: 80vh;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-right: 20px;
 }
 
 .basket_btn {
@@ -263,4 +264,15 @@ $products_basket__height: 80vh;
 .basket_btn:hover {
   background-color: grey;
   color: lavender;
+}
+
+.space_in_basket {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.space_in_basket__paragraph {
+  font-size: 48px;
 }
