1. Move the product catalog into a separate component (change the html-code and js-code); 2. Add the list of basket goods to a separate component (change the html-code and js-code); 3. Move the filter into a separate component (change the html-code and js-code); 4.Create an error message in a separate component that appears when access is denied (create js-code, scss-code and commented out html-code); 5. Include in the file "index.html" 4 created js-files with separate components (catalog of goods, list of goods in the basket, filter and error message if access is denied); 6. Correct the name of one variable; 7. Make minor cosmetic changes.

--- a/styles/style.css
+++ b/styles/style.css
@@ -329,4 +329,33 @@
 .space_in_basket__paragraph {
   font-size: 48px;
 }
+
+.access_error {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  min-height: 90vh;
+  background-color: #efefef;
+  z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.access_error__text_position {
+  margin: 0 20vw;
+}
+
+.access_error__description {
+  text-align: center;
+  font-size: 72px;
+  color: red;
+}
 /*# sourceMappingURL=style.css.map */
