--- a/styles/style.scss
+++ b/styles/style.scss
@@ -276,3 +276,26 @@ $products_basket__height: 80vh;
 .space_in_basket__paragraph {
   font-size: 48px;
 }
+
+.access_error {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  min-height: 100vh - $header__height;
+  background-color: #efefef;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.access_error__text_position {
+  margin: 0 20vw;
+}
+
+.access_error__description {
+  text-align: center;
+  font-size: 72px;
+  color: red;
+}
