--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1892,7 +1892,7 @@ button {
 }
 
 .basket_list {
-  position: absolute;
+  position: fixed;
   top: 5vh;
   left: 20vw;
   width: 60vw;
@@ -2013,6 +2013,60 @@ button {
 .basket_btn_del:hover {
   color: white;
   background-color: red;
+}
+
+.basket_close {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  overflow: hidden;
+  z-index: 991;
+}
+
+.basket_close:hover {
+  background-color: #0000005c;
+}
+
+.basket_x {
+  display: block;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 100px;
+  line-height: 50px;
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
+  color: #0000005c;
+  font-weight: 100;
+  z-index: 992;
+}
+
+.basket_close:hover .basket_x {
+  color: #efefef;
+}
+
+.space_in_basket {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.space_in_basket__paragraph {
+  font-size: 48px;
+  line-height: 48px;
+  color: #000000;
 }
 
 @media (max-width: 1324px) {
