--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -1549,7 +1549,7 @@ button {
 
 .basket_list {
   // display: none;
-  position: absolute;
+  position: fixed;
   top: (100vh - $header__height - $products_basket__height) / 2;
   left: (100vw - $products_basket__width) / 2;
   width: $products_basket__width;
@@ -1645,6 +1645,54 @@ button {
 .basket_btn_del:hover {
   color: white;
   background-color: red;
+}
+
+.basket_close {
+  // display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  overflow: hidden;
+  z-index: 991;
+}
+
+.basket_close:hover {
+  background-color: #0000005c;
+}
+
+.basket_x {
+  display: block;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 100px;
+  line-height: 50px;
+  transform: rotateZ(45deg);
+  color: #0000005c;
+  font-weight: 100;
+  z-index: 992;
+}
+
+.basket_close:hover .basket_x {
+  color: #efefef;
+}
+
+.space_in_basket {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.space_in_basket__paragraph {
+  font-size: 48px;
+  line-height: 48px;
+  color: #000000;
 }
 
 @media (max-width: 1324px) {
